--- a/src/view/admin/category/categoryAdd.ejs
+++ b/src/view/admin/category/categoryAdd.ejs
@@ -29,7 +29,7 @@
             <div class="form-group">
               <label> Category Image</label>
               <div class="image-upload">
-                <input type="file" name="image" class="productImageInput" accept="image/png, image/gif, image/jpeg"/>
+                <input type="file" name="image" id="image-input" accept="image/png, image/gif, image/jpeg"/>
                 <div class="image-uploads">
                   <img
                     src="/static/backend/assets/img/icons/upload.svg"
@@ -48,6 +48,7 @@
             <div class="product-list">
               <ul class="row input-image-previewer"></ul>
             </div>
+            <div id="imageContainer" style="width: 300px; height: 300px;"></div>
           </div>
 
           <div class="col-lg-12">
