--- a/src/view/admin/category/categoryEdit.ejs
+++ b/src/view/admin/category/categoryEdit.ejs
@@ -49,7 +49,7 @@
 
           <div class="col-12">
             <div class="product-list">
-              <ul class="row input-image-previewer">
+              <ul class="row" id="input-image-previewer">
                 <li class="ps-0">
                   <div class="productviews">
                     <div class="productviewsimg">
@@ -62,7 +62,6 @@
                       <div class="productviewsname">
                         <h2><%= locals?.imageName %></h2>
                       </div>
-                      <!-- <a href="javascript:void(0);" class="hideset">x</a> -->
                     </div>
                   </div>
                 </li>
