--- a/src/view/admin/product/productEdit.ejs
+++ b/src/view/admin/product/productEdit.ejs
@@ -22,7 +22,9 @@
               <label>Category</label>
               <select class="select" name="category">
                 <option value="">Choose Category</option>
-                <option value="laptop">Computers</option>
+                <%for(const category of locals.categories){%>
+                  <option value="<%=category.id%>" <%= (locals.product?.category.name === category.name ) ? 'selected' : ''%>><%=category.name%></option>
+                <%}%>
               </select>
             </div>
           </div>
