--- a/src/view/admin/product/productView.ejs
+++ b/src/view/admin/product/productView.ejs
@@ -14,41 +14,41 @@
               <ul class="product-bar">
                 <li>
                   <h4>Product</h4>
-                  <h6>Macbook pro</h6>
+                  <h6><%= locals.product.product_name || ''%></h6>
                 </li>
                 <li>
                   <h4>Category</h4>
-                  <h6>Computers</h6>
+                  <h6><%= locals.product.category.name || ''%></h6>
                 </li>
                 <li>
                   <h4>Unit</h4>
-                  <h6>Piece</h6>
+                  <h6><%= locals.product.unit || ''%></h6>
                 </li>
                 <li>
                   <h4>Quantity</h4>
-                  <h6>50</h6>
+                  <h6><%= locals.product.quantity || ''%></h6>
                 </li>
                 <li>
                   <h4>Discount</h4>
-                  <h6>Percentage</h6>
+                  <h6><%= locals.product.discount || ''%></h6>
                 </li>
                 <li>
                   <h4>Price</h4>
-                  <h6>1500.00</h6>
+                  <h6><%= locals.product.price || ''%></h6>
                 </li>
                 <li>
                   <h4>Status</h4>
                   <h6>
-                    <a href="javascript:void(0);" class="bg-lightgreen badges text-white">Active</a>
+                    <% if(product.isActive == true){%>
+                        <a href="javascript:void(0);" class="bg-lightgreen badges text-white">Active</a>
+                    <% } else{%>
+                        <a href="javascript:void(0);" class="bg-lightred badges text-white">Inactive</a>
+                    <%}%>
                   </h6>
                 </li>
                 <li>
                   <h4>Description</h4>
-                  <h6>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s,
-                  </h6>
+                  <h6><%= locals.product.description || ''%></h6>
                 </li>
               </ul>
             </div>
@@ -60,16 +60,13 @@
           <div class="card-body">
             <div class="slider-product-details">
               <div class="owl-carousel owl-theme product-slide">
-                <div class="slider-product">
-                  <img src="/static/backend/assets/img/product/product69.jpg" alt="img" />
-                  <h4>macbookpro.jpg</h4>
-                  <h6>581kb</h6>
-                </div>
-                <div class="slider-product">
-                  <img src="/static/backend/assets/img/product/product69.jpg" alt="img" />
-                  <h4>macbookpro.jpg</h4>
-                  <h6>581kb</h6>
-                </div>
+                <% if(locals.product){ %>
+                    <% for(let image of locals.product.images){ %>
+                        <div class="slider-product">
+                            <img src="/<%= image %>" alt="img" />
+                        </div>
+                    <%}%>
+                <%}%>
               </div>
             </div>
           </div>
