--- a/src/view/admin/product/productAdd.ejs
+++ b/src/view/admin/product/productAdd.ejs
@@ -60,8 +60,8 @@
                   <label>Discount</label>
                   <select class="select" name="discount">
                     <option>Percentage</option>
-                    <option>10</option>
-                    <option>20</option>
+                    <option value="10">10%</option>
+                    <option value="20">20%</option>
                   </select>
                 </div>
               </div>
