--- a/src/view/admin/product/productEdit.ejs
+++ b/src/view/admin/product/productEdit.ejs
@@ -8,12 +8,13 @@
 
     <div class="card">
       <div class="card-body">
+        <form action="?_method=PUT" method="post" enctype="multipart/form-data">
         <div class="row">
 
           <div class="col-lg-3 col-sm-6 col-12">
             <div class="form-group">
               <label>Product Name</label>
-              <input type="text" name="product_name"/>
+              <input type="text" name="product_name" value="<%= locals.product?.product_name || '' %>"/>
             </div>
           </div>
 
@@ -34,8 +35,8 @@
               <label>Unit</label>
               <select class="select" name="unit">
                 <option value="">Choose Unit</option>
-                <option value="PCS">PCS</option>
-                <option value="NOS">NOS</option>
+                <option value="PCS" <%= (locals.product.unit === 'PCS' ) ? 'selected' : ''%>>PCS</option>
+                <option value="NOS" <%= (locals.product.unit === 'NOS' ) ? 'selected' : ''%>>NOS</option>
               </select>
             </div>
           </div>
@@ -43,14 +44,14 @@
           <div class="col-lg-3 col-sm-6 col-12">
             <div class="form-group">
               <label>Quantity</label>
-              <input type="text" name="quantity"/>
+              <input type="text" name="quantity" value="<%= locals.product?.quantity || '' %>"/>
             </div>
           </div>
 
           <div class="col-lg-12">
             <div class="form-group">
               <label>Description</label>
-              <textarea class="form-control" name="description"></textarea>
+              <textarea class="form-control" name="description"><%= locals.product?.description || '' %></textarea>
             </div>
           </div>
 
@@ -59,8 +60,8 @@
               <label>Discount</label>
               <select class="select" name="discount">
                 <option>Percentage</option>
-                <option>10%</option>
-                <option>20%</option>
+                <option value="10" <%= (locals.product.discount === '10' ) ? 'selected' : ''%>>10%</option>
+                <option value="20" <%= (locals.product.discount === '20' ) ? 'selected' : ''%>>20%</option>
               </select>
             </div>
           </div>
@@ -68,7 +69,7 @@
           <div class="col-lg-3 col-sm-6 col-12">
             <div class="form-group">
               <label>Price</label>
-              <input type="text" name="price"/>
+              <input type="text" name="price" value="<%= locals.product?.price || '' %>"/>
             </div>
           </div>
 
@@ -84,9 +85,10 @@
 
           <div class="col-lg-12">
             <div class="form-group">
-              <label> Product Image</label>
+              <label> Product Images  <br><span>(3 images required)</label>
               <div class="image-upload">
-                <input type="file" name="images" multiple/>
+                <input type="file" name="images" multiple class="productImageInput" data-max-files="3" accept="image/*"/>
+                <input type="hidden" name="existingImages" value="<%= locals.product?.images || '' %>">
                 <div class="image-uploads">
                   <img src="/static/backend/assets/img/icons/upload.svg" alt="img" />
                   <h4>Drag and drop a file to upload</h4>
@@ -95,11 +97,33 @@
             </div>
           </div>
 
+          <div class="col-12">
+            <div class="product-list">
+              <ul class="row" id="input-image-previewer">
+                <% if(locals.product.images){ %>
+                  <% for(let image of locals.product.images){ %>
+                    <li class="ps-0">
+                      <div class="p-2 border rounded">
+                        <div class="productviewsimg">
+                          <img
+                          src="/<%= image %>"
+                          alt="product>"
+                        />
+                        </div>
+                      </div>
+                    </li>
+                  <% } %>
+                <% } %>
+              </ul>
+            </div>
+          </div>
+
           <div class="col-lg-12">
             <button type="submit" class="btn btn-submit me-2">Submit</button>
             <a href="/admin/product/list" class="btn btn-cancel">Cancel</a>
           </div>
         </div>
+      </form>
       </div>
     </div>
   </div>
