--- a/src/view/admin/category/categoryAdd.ejs
+++ b/src/view/admin/category/categoryAdd.ejs
@@ -29,7 +29,7 @@
             <div class="form-group">
               <label> Category Image</label>
               <div class="image-upload">
-                <input type="file" name="image" class="productImageInput" accept="image/*"/>
+                <input type="file" name="image" data-error-el="input-image-error" class="productImageInput" accept="image/*"/>
                 <div class="image-uploads">
                   <img
                     src="/static/backend/assets/img/icons/upload.svg"
@@ -38,9 +38,7 @@
                   <h4>Drag and drop a file to upload</h4>
                 </div>
               </div>
-              <% if(locals.errorObj?.imageError){%>
-              <p class="text-danger"><%= locals.errorObj?.imageError %></p>
-              <%}%>
+              <p class="text-danger" id="input-image-error"><%= locals.errorObj?.imageError %></p>
             </div>
           </div>
 
